2000-12-13  DJ Delorie  <dj@redhat.com>

	* typeck.c (build_binary_op): Do signed/unsigned warnings for >?
	and <? operators.

2000-12-08  Jason Merrill  <jason@redhat.com>

	* error.c (dump_function_name): Don't let the user see __comp_ctor.

	Clean up copy-initialization in overloading code.
	* call.c (build_user_type_conversion_1): Die if we are asked to
	convert to the same or a base type.
	(implicit_conversion): Avoid doing so.  Lose reference binding code.
	(convert_like_real): Treat BASE_CONV and RVALUE_CONV as implicit
	direct-initialization.  Also do direct-init part of copy-init.
	(build_user_type_conversion): Don't provide context to convert_like.
	* cvt.c (ocp_convert): build_user_type_conversion will now provide
	the constructor call for copy-init.

	* pt.c (tsubst_decl): Call clone_function_decl here if this is an
	instantiation of a member template.
	(do_decl_instantiation): Not here.

2000-12-07  Nathan Sidwell  <nathan@codesourcery.com>

	* class.c (check_field_decls): Don't special case anonymous
	fields in error messages.
	(note_name_declared_in_class): Use %D on diagnostic.
	
	* tree.c (pod_type_p): Use strip_array_types.
	(cp_valid_lang_attribute): Likewise.
	* typeck.c (cp_type_quals): Strip arrays separately, to avoid
	multiple evaluations.
	(cp_has_mutable_p): Use strip_array_types.	

2000-12-07  Nathan Sidwell  <nathan@codesourcery.com>

	* cp-tree.h (sufficient_parms_p): Declare new function.
	* call.c (sufficient_parms_p): New function, broken out of ...
	(add_function_candidate): ... here. Use it.
	(add_conv_candidate): Use it.
	* decl.c (grok_ctor_properties): Use it.

2000-12-07  Jakub Jelinek  <jakub@redhat.com>

	* optimize.c (copy_body_r): Set STMT_IS_FULL_EXPR_P on EXPR_STMT.

2000-12-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* decl2.c (lang_decode_option): Handle -Wformat-security.

2000-12-06  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	* pt.c (verify_class_unification): New function.
	(get_class_bindings): Use it.